# QT

Calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Dialogs/: CMakeLists.txt  dialog.cpp  dialog.h  mainwindow.cpp  mainwindow.h  resource.qrc
RegistrationPage/: CMakeLists.txt  Rescource.qrc  main.cpp  mainwindow.cpp  mainwindow.h  registrationpage.cpp  registrationpage.h  userdatabase.cpp  userdatabase.h
SignalsAndSlots/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
